174A-62: zip de colecciones
